<resources>
    <string name="app_name">Notizbuch</string>
    <string name="hint_content_title">Gib den Titel deiner Notiz ein</string>
    <string name="hint_content_text">Gib den Text deiner Notiz ein</string>
    <string name="update_note">Notiz aktualisieren</string>
    <string name="add_note">Notiz hinzufügen</string>
    <string name="content_title">Erstelle und bearbeite deine Notizen</string>
    <string name="label_title">Titel</string>
    <string name="label_text">Inhalt der Notiz</string>
    <string name="delete_note">Notiz löschen</string>
    <string name="label_date">Datum</string>
</resources>
