<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp">

    <TextView
        android:text="@string/content_title"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_title"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"/>

        <EditText
            android:hint="@string/hint_content_title"
            android:id="@+id/content_title"
            android:singleLine="true"
            android:inputType="text|textCapSentences|textAutoComplete|textAutoCorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:background="@drawable/rounded_input"
            />

        <TextView
            android:text="@string/label_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"/>

        <EditText
            android:hint="@string/hint_content_text"
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:background="@drawable/rounded_input"
            android:inputType="text|textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp">

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/add_note"
            android:textColor="@color/colorBackground"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_note"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorBackground"/>



    </LinearLayout>


</LinearLayout>
