<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_title"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textStyle="italic"
            android:textSize="12sp"
            android:text="@string/label_date"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_text"
        android:padding="10dp"
        android:background="@drawable/rounded_text"
        android:layout_marginBottom="15dp"
        />


</LinearLayout>